// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Feature/> should render the <Feature/> with just a title 1`] = `
<div
  class="feature__Container-sc-7i3nm1-0 gSHRFL"
>
  <h1
    class="feature__Title-sc-7i3nm1-1 cwuTdo"
  >
    Unlimited films, TV programmes and more.
  </h1>
</div>
`;

exports[`<Feature/> should render the <Feature/> with with populated data 1`] = `
<div
  class="feature__Container-sc-7i3nm1-0 gSHRFL"
>
  <h1
    class="feature__Title-sc-7i3nm1-1 cwuTdo"
  >
    Unlimited films, TV programmes and more.
  </h1>
  <h2
    class="feature__SubTitle-sc-7i3nm1-2 kAeiwM"
  >
    Watch anywhere. Cancel any time.
  </h2>
</div>
`;
